<package>

  <name>p2f</name>
  <version>1.0.0</version>
  <description>
    Point cloud conversions for rslidar 3D LIDARs.
  </description>
  <maintainer email="wangzhe936@outlook.com">Tony</maintainer>
  <author>Zhe Wang</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosconsole</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rosconsole</run_depend>
</package>
